# detection_ws

./: .gitattributes  .gitignore  README.md
rosbag2_2025_08_31-18_15_06/: metadata.yaml
rosbag2_2025_09_04-13_36_34/: metadata.yaml
rosbag2_2025_09_04-14_04_27/: metadata.yaml
rosbag2_2025_09_04-14_36_07/: metadata.yaml
rosbag2_2025_09_04-15_22_26/: metadata.yaml
rosbag2_2025_09_05-20_33_38/: metadata.yaml
rosbag2_2025_09_05-20_34_05/: metadata.yaml
rosbag2_2025_09_05-20_34_38/: metadata.yaml
rosbag2_2025_09_06-09_54_28/: metadata.yaml
src/autoware_cuda_pointcloud_preprocessor/config/: cuda_pointcloud_preprocessor.param.yaml
src/autoware_cuda_pointcloud_preprocessor/launch/: cuda_pointcloud_preprocessor.launch.py  cuda_pointcloud_preprocessor.launch.xml
src/autoware_euclidean_cluster_gpu/: CMakeLists.txt  README.md  package.xml  tmpfile
src/autoware_euclidean_cluster_gpu/config/: euclidean_cluster_gpu.param.yaml
src/autoware_euclidean_cluster_gpu/include/autoware/euclidean_cluster_gpu/: euclidean_cluster_gpu.hpp
src/autoware_euclidean_cluster_gpu/launch/: euclidean_cluster_gpu.launch.py
src/autoware_euclidean_cluster_gpu/lib/: euclidean_cluster_cuda.cu
src/autoware_euclidean_cluster_gpu/src/: euclidean_cluster_gpu_node.cpp  label_compress.cpp
src/autoware_ground_segmentation/config/: ground_segmentation.param.yaml  ransac_ground_filter.param.yaml  ray_ground_filter.param.yaml  scan_ground_filter.param.yaml
src/autoware_ground_segmentation/launch/: ransac_ground_filter.launch.xml  ray_ground_filter.launch.xml  scan_ground_filter.launch.py  scan_ground_filter.launch.xml
src/nebula/nebula_ros/config/lidar/velodyne/: VLP32.param.yaml  VLS128.param.yaml
src/range_image_clustering/: CMakeLists.txt  README.md  debug_topic.py  package.xml  test_point_cloud.py
src/range_image_clustering/config/: params.yaml
src/range_image_clustering/include/range_image_clustering/: range_image_clustering.h  range_image_clustering_cuda.cuh
src/range_image_clustering/launch/: check_topics.launch.py  range_image_clustering_for_tracker.launch.py  test_clustering.launch.py
src/range_image_clustering/src/: range_image_clustering.cpp  range_image_clustering_cuda.cu  range_image_clustering_node.cpp  roi_publisher_node.cpp
src/ultralytics_ros/: CMakeLists.txt
src/ultralytics_ros/config/: tracker_with_cloud.param.yaml
src/ultralytics_ros/include/tracker_with_cloud_node/: tracker_with_cloud_node.h
src/ultralytics_ros/launch/: tracker.launch.xml  tracker_with_cloud.launch.py  tracker_with_cloud.launch.xml
src/ultralytics_ros/models/: labacon.pt  sign.pt
src/ultralytics_ros/rviz2/: default.rviz
src/ultralytics_ros/script/: tracker_node.py
src/ultralytics_ros/src/: tracker_with_cloud_node.cpp
src/usb_cam/config/: camera_info1.yaml  camera_info2.yaml  camera_info3.yaml  camera_info4.yaml  params_1.yaml  params_2.yaml  params_3.yaml  params_4.yaml
src/usb_cam/launch/: camera.launch.py  camera_config.py
src/yolo_train/: README.md  requirements.txt  train_yolo_local.py
src/yolo_train/dataset/20250905_174111/: image_000000.json  image_000002.json  image_000003.json  image_000005.json  image_000006.json  image_000007.json  image_000008.json  image_000010.json  image_000024.json  image_000027.json  image_000029.json  image_000035.json  image_000036.json  image_000037.json  image_000043.json  image_000045.json  image_000046.json  image_000081.json  image_000084.json  image_000085.json  image_000086.json  image_000088.json  image_000089.json  image_000091.json  image_000092.json  image_000093.json  image_000094.json  image_000095.json  image_000103.json  image_000105.json  image_000108.json  image_000109.json  image_000110.json  image_000111.json
src/yolo_train/merged_dataset/image/: 20250905_174111_000001.json  20250905_174111_000004.json  20250905_174111_000009.json  20250905_174111_000012.json  20250905_174111_000015.json  20250905_174111_000019.json  20250905_174111_000020.json  20250905_174111_000022.json  20250905_174111_000025.json  20250905_174111_000026.json  20250905_174111_000028.json  20250905_174111_000029.json  20250905_174111_000033.json  20250905_174111_000041.json  20250905_174111_000043.json  20250905_174111_000045.json  20250905_174111_000046.json
src/yolo_train/merged_dataset/image/YOLODataset/: dataset.yaml
src/yolo_train/merged_dataset/image/YOLODataset/labels/: train.cache  val.cache
src/yolo_train/merged_dataset/image/YOLODataset/labels/train/: 20250905_174111_000000.txt  20250905_174111_000001.txt  20250905_174111_000002.txt  20250905_174111_000004.txt  20250905_174111_000005.txt  20250905_174111_000006.txt  20250905_174111_000007.txt  20250905_174111_000008.txt  20250905_174111_000009.txt  20250905_174111_000010.txt  20250905_174111_000011.txt  20250905_174111_000012.txt  20250905_174111_000014.txt  20250905_174111_000015.txt  20250905_174111_000017.txt  20250905_174111_000018.txt  20250905_174111_000019.txt  20250905_174111_000020.txt  20250905_174111_000021.txt  20250905_174111_000022.txt  20250905_174111_000023.txt  20250905_174111_000024.txt  20250905_174111_000025.txt  20250905_174111_000026.txt  20250905_174111_000027.txt  20250905_174111_000029.txt  20250905_174111_000030.txt  20250905_174111_000031.txt  20250905_174111_000032.txt  20250905_174111_000034.txt  20250905_174111_000035.txt  20250905_174111_000036.txt  20250905_174111_000037.txt  20250905_174111_000038.txt  20250905_174111_000039.txt  20250905_174111_000040.txt  20250905_174111_000041.txt  20250905_174111_000042.txt  20250905_174111_000043.txt  20250905_174111_000044.txt  (+5 more)
src/yolo_train/merged_dataset/image/YOLODataset/labels/val/: 20250905_174111_000003.txt  20250905_174111_000013.txt  20250905_174111_000016.txt  20250905_174111_000028.txt  20250905_174111_000033.txt  20250905_174111_000045.txt
src/yolo_train/merged_dataset/image/YOLODataset/runs/detect/run/: args.yaml
