<?xml version="1.0"?>
<package format="3">
  <name>euclidean_cluster_gpu</name>
  <version>0.1.0</version>
  <description>CUDA-accelerated Euclidean clustering for point clouds (ROS 2 Humble).</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>message_filters</depend>
  <depend>builtin_interfaces</depend>
  <depend>vision_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
